--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <header> 
+            <div>
+                <a href="https://www.linkedin.com/in/taylor-riley-b65314271"><img id="header" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png?20140125013055" alt="linkedin" title="linkedin logo"/></a>
+            </div>
+        </header>
         <link rel="stylesheet" href="./style.css" />
         <title>Preworking on Some Things</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <script src="script.js"></script>
+        <h2 id="greeting">Hi, I'm</h2>
+        <h1 id="greeting"><em>Taylor Riley</em></h1>
+        <h3 id="greeting">I'm learning how to code!</h3>
+        <div id="left">
+            <h1 id="left">A little about me</h1>
+            <p id="left">
+                My name is Taylor and up until recently I have been working as an assistant manager at Discount Tire. One day I decided I wanted to pursue something new. I am very excited to start this new journey into software engineering at Flatiron School!
+            </p>
+        <div id ="right">
+            <img id="self" src="IMG_3717.jpeg" alt="image of Taylor"/>
+        </div>
+        </div>
     </body>
 </html>
